# duckling_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  buildspec.yml
haskell_duckling_ffi/: cabal.project  duckling-ffi.cabal
haskell_duckling_ffi/csrc/: wrapper.c
haskell_duckling_ffi/src/: DucklingFFI.hs
src/: lib.rs
tests/: duckling_ffi.rs
